--- a/sass/preset/_header.scss
+++ b/sass/preset/_header.scss
@@ -4,10 +4,9 @@
 .nav-link {
     color: #bfbfbf;
     font-size: 1.1rem;
-}
-
-.nav-link:hover {
-    color: #ce9907 !important;
+    &:hover {
+        color: #ce9907 !important;
+    }
 }
 
 .logo {
