--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 }
 
 section {
-  background-color: rgba(248, 248, 248, 0.431372549); /* Fondo claro */
+  background-color: rgba(248, 248, 248, 0.5098039216); /* Fondo claro */
   padding: 25px;
   border-radius: 8px; /* Bordes redondeados */
   margin: 20px auto;
@@ -74,6 +74,20 @@ h1, h2 {
 .card-inicio:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.welcome-section {
+  background-color: rgba(248, 248, 248, 0.6274509804); /* Mantén el fondo claro */
+  padding: 40px; /* Aumenta un poco el padding para espacio en el texto */
+  border-radius: 8px;
+  margin: 20px auto;
+  max-width: 85%; /* Puedes reducir el ancho máximo si lo deseas */
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3); /* Sombra más suave */
+  text-align: center;
+}
+.welcome-section h1 {
+  font-weight: 700; /* Destaca el título */
+  letter-spacing: 2px; /* Separación de letras para elegancia */
 }
 
 .titulo-catalogo {
@@ -168,7 +182,7 @@ h1, h2 {
 }
 
 section form {
-  background-color: rgba(248, 248, 248, 0.3647058824);
+  background-color: rgba(188, 188, 188, 0.8392156863);
   font-size: 1.1em;
   padding: 10px 20px;
   border-radius: 8px;
