--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -14,3 +14,18 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 }
+
+.welcome-section {
+    background-color: #f8f8f8a0; /* Mantén el fondo claro */
+    padding: 40px; /* Aumenta un poco el padding para espacio en el texto */
+    border-radius: 8px;
+    margin: 20px auto;
+    max-width: 85%; /* Puedes reducir el ancho máximo si lo deseas */
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3); /* Sombra más suave */
+    text-align: center;
+    h1{
+      font-weight: 700; /* Destaca el título */
+      letter-spacing: 2px; /* Separación de letras para elegancia */
+    }
+}
+
